--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "php-flasher/flasher-toastr-laravel": "^1.15",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
