--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "asantibanez/livewire-calendar": "^2.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^2.12",
         "php-flasher/flasher-toastr-laravel": "^1.15",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.7"
