--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "asantibanez/livewire-calendar": "^2.2",
         "guzzlehttp/guzzle": "^7.2",
+        "jinoantony/laravel-kanban": "^1.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
